--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -33,14 +33,35 @@
 .container li{
     padding: 10% ;
     font-size: 1.2rem;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid rgb(172, 169, 169);
 
 }
-
+.container li:hover{
+    border-bottom: 2px solid #bd8334;
+}
 
 .r-top{
     background-color: #faf3ef;
     height: 10vh;
+    align-items: right;
+    width:100vw;
+    box-shadow: 1px 5px 20px 1px rgb(252, 229, 198);
+   
     
+}
+.r-top .info{
+    margin-left: 50%;
+    display: flex;
+    justify-content: space-around;
+    padding: 1%;
     
+}
+.r-top input{
+    width:40%;
+    border-radius: 17px;
+    border: none;
+    box-shadow: 1px 1px 4px 1px rgb(158, 155, 152);
+}
+.active{
+    background-color: #bd8334;
 }
